Firewall.tf
# SECURITY GROUP
resource "aws_security_group" "allow_food" {
  name        = "foodapp ssh-http"
  description = "Allow ssh & http inbound traffic"
  vpc_id      = aws_vpc.foodapp-vpc.id

  ingress {
    description      = "ssh from VPC"
    from_port        = 22
    to_port          = 22
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
  ingress {
    description      = "http from VPC"
    from_port        = 80
    to_port          = 80
    protocol         = "tcp"
    cidr_blocks      = ["0.0.0.0/0"]
  }
  
  egress {
    from_port        = 0
    to_port          = 0
    protocol         = "-1"
    cidr_blocks      = ["0.0.0.0/0"]
  }

  tags = {
    Name = "food SG"
  }
}
